--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -287,9 +287,7 @@ services:
       test: ["CMD", "curl", "--fail", "http://localhost:5555/"]
       interval: 30s
       timeout: 10s
-      retries: 5
-      start_period: 30s
-    restart: always
+      retries: 5git checkout ea3360cee1b4a5f1170152ba8c2c52eaa1f284e8 -- <path-to-folder>
     depends_on:
       <<: *airflow-common-depends-on
       airflow-init:
