MOD - Added pip packages to airflow for data analysis

--- a/docker/airflow/Dockerfile
+++ b/docker/airflow/Dockerfile
@@ -3,4 +3,4 @@ FROM apache/airflow:2.6.0-python3.8
 USER airflow
 
 RUN pip install --upgrade pip && \
-    pip install mlflow==2.10.2 pandas sqlalchemy pymysql scikit-learn matplotlib xgboost
+    pip install mlflow==2.10.2 pandas sqlalchemy pymysql scikit-learn matplotlib evidently pycaret tensorflow-data-validation shap
