--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -287,7 +287,7 @@ services:
       test: ["CMD", "curl", "--fail", "http://localhost:5555/"]
       interval: 30s
       timeout: 10s
-      retries: 5git checkout ea3360cee1b4a5f1170152ba8c2c52eaa1f284e8 -- <path-to-folder>
+      retries: 5
     depends_on:
       <<: *airflow-common-depends-on
       airflow-init:
@@ -310,6 +310,7 @@ services:
     restart: unless-stopped
     networks:
       - frontend
+      - backend
     
   mlflow:
     container_name: Mlflow_server
