--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,18 @@ x-airflow-common:
     AIRFLOW__CORE__LOAD_EXAMPLES: 'False'
     AIRFLOW__API__AUTH_BACKENDS: 'airflow.api.auth.backend.basic_auth,airflow.api.auth.backend.session'
     AIRFLOW__SCHEDULER__ENABLE_HEALTH_CHECK: 'true'
+    # Add environment variables for database connections
+    RAWDB_USER: ${RAWDB_USER}
+    RAWDB_PASSWORD: ${RAWDB_PASSWORD}
+    RAWDB_NAME: ${RAWDB_NAME}
+    CLEANDB_USER: ${CLEANDB_USER}
+    CLEANDB_PASSWORD: ${CLEANDB_PASSWORD}
+    CLEANDB_NAME: ${CLEANDB_NAME}
+    POSTGRES_USER: ${POSTGRES_USER}
+    POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    POSTGRES_DB: ${POSTGRES_DB}
+
+    
   volumes:
     - ${AIRFLOW_PROJ_DIR:-.}/dags:/opt/airflow/dags
     - ${AIRFLOW_PROJ_DIR:-.}/logs:/opt/airflow/logs
