--- a/docker/airflow/Dockerfile
+++ b/docker/airflow/Dockerfile
@@ -1,29 +1,11 @@
 FROM apache/airflow:2.6.0-python3.8
 
-# Switch to root user to install system tools
-USER root
-
-# Install the necessary development tools
-RUN apt-get update && apt-get install -y \
-    build-essential \
-    gcc \
-    && rm -rf /var/lib/apt/lists/*
-
-# Switch back to the airflow user
-USER airflow
-
-# Upgrade pip and install Python dependencies
-RUN pip install --upgrade pip && \
-    pip install --no-cache-dir mlflow==2.10.2 \
-    pandas \
-    sqlalchemy \
-    pymysql \
-    scikit-learn \
-    matplotlib \
-    evidently \
-    pycaret \
-    tensorflow-data-validation \
-    shap \
-    urllib3==1.26.6 \
-    botocore==1.21.0 \
-    boto3
+FROM apache/airflow:2.6.0-python3.9
+# Install python packages
+RUN pip install mlflow==2.3.0
+RUN pip install pycaret==3.0.0
+RUN pip install scikit-learn==1.2.2
+RUN pip install scipy==1.11.4
+RUN pip install boto3==1.26.121
+RUN pip install requests==2.28.2
+RUN pip install joblib==1.3.0
