--- a/docker/mlflow/requirements.txt
+++ b/docker/mlflow/requirements.txt
@@ -1,6 +1,12 @@
 cryptography==42.0.5
+matplotlib
+
+fastapi==0.104.1
+uvicorn==0.24.0
+pandas==2.0.1
+joblib==1.3.2
+scikit-learn==1.2.2
 mlflow==2.3.0
 boto3==1.26.121
 pymysql==1.1.0
-psycopg2-binary==2.9.9
-matplotlib
+pydantic
