--- a/docker/streamlit/Dockerfile
+++ b/docker/streamlit/Dockerfile
@@ -1,10 +1,7 @@
 
+FROM python:3.10-slim
 
-FROM python:3.9-slim
-
-WORKDIR /app
-
-COPY . . 
+# COPY ./requirements.txt /tmp/requirements.txt
 
 RUN apt-get update && apt-get install -y \
     build-essential \
@@ -13,11 +10,6 @@ RUN apt-get update && apt-get install -y \
     git \
     && rm -rf /var/lib/apt/lists/*
 
-
-RUN pip3 install -r requirements.txt
-
-EXPOSE 8501
-
-HEALTHCHECK CMD curl --fail http://localhost:8501/_stcore/health
-
-ENTRYPOINT ["streamlit", "run", "streamlit_app.py", "--server.port=8501", "--server.address=0.0.0.0"]
+RUN pip install altair
+RUN pip install pandas
+RUN pip install streamlit
