--- a/docker/inference/Dockerfile
+++ b/docker/inference/Dockerfile
@@ -1,11 +1,14 @@
 FROM python:3.9
-RUN pip install mlflow==2.3.0
-RUN pip install fastapi==0.68.2
-RUN pip install uvicorn==0.15.0
-RUN pip install scikit-learn==1.2.2
-RUN pip install numpy==1.24.3
-RUN pip install pandas==1.5.3
-RUN pip install scipy==1.11.4
-RUN pip install psutil==5.9.5
-RUN pip install typing_extensions==4.11.0
-RUN pip install boto3==1.26.121
+COPY requirements.txt /tmp
+RUN pip install -r /tmp/requirements.txt
+
+# RUN pip install mlflow==2.3.0
+# RUN pip install fastapi==0.68.2
+# RUN pip install uvicorn==0.15.0
+# RUN pip install scikit-learn==1.2.2
+# RUN pip install numpy==1.24.3
+# RUN pip install pandas==1.5.3
+# RUN pip install scipy==1.11.4
+# RUN pip install psutil==5.9.5
+# RUN pip install typing_extensions==4.11.0
+# RUN pip install boto3==1.26.121
