--- a/docker/inference/requirements.txt
+++ b/docker/inference/requirements.txt
@@ -1,10 +1,17 @@
+mlflow==2.3.0
 fastapi==0.104.1
 uvicorn==0.24.0
-pandas==2.0.1
-joblib==1.3.2
 scikit-learn==1.2.2
-cryptography==42.0.5
-mlflow==2.3.0
+numpy==1.24.3
+pandas==2.0.1
+scipy==1.11.4
+psutil==5.9.5
+typing_extensions==4.11.0
 boto3==1.26.121
+cryptography==42.0.5
+matplotlib
+joblib==1.3.2
 pymysql==1.1.0
 pydantic
+psycopg2-binary==2.9.9
+shap
